# docker-for-ml

./: README.md  pyproject.toml
tf_mecab/: Dockerfile  pyproject.toml
