[tool.poetry]
name = "docker-for-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.1.0"
keras = "*"
opencv-contrib-python = "*"
jupyter = "*"
pandas = "*"
matplotlib = "*"
japanize-matplotlib = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
