[tool.poetry]
name = "tf_mecab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keras = "*"
tensorflow = "*"
mecab-python3 = "0.996.5"
matplotlib = "*"
japanize-matplotlib = "*"
pandas = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
